overflow problem fix

--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -48,6 +48,7 @@ section {
   @apply flex;
   @apply justify-center;
   @apply items-center;
+  @apply overflow-hidden;
 }
 #landing-title {
   @apply absolute;
